--- a/index.html
+++ b/index.html
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="./global.css" />
-  <link rel="stylesheet" href="./index.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-  <div class="untitled-1">
-    <img class="vector-icon" alt="" src="./public/vector.svg" />
-    <header class="untitled-1-inner">
-      <div class="frame-parent"></div>
-    </header>
-    <main class="clip-path-group-wrapper">
-      <img class="clip-path-group" alt="" src="./public/clip-path-group.svg" />
-    </main>
-  </div>
+    <h1>oi</h1>
 </body>
-
 </html>
