--- a/aqualife/index.html
+++ b/aqualife/index.html
@@ -35,10 +35,28 @@
 
     <!------------------ hero ------------------>
     <section class="hero">
-        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, sit?</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit fugit quisquam tenetur vero cumque vel?</p>
-        <a href="" class="btn" id="botao">Mais informações</a>
+        <h1>Lorem ipsum dolor sit amet, consectetur </h1>
+        <h1>adipisicing elit. Nulla, sit?</h1>
+        <h3>Lorem ipsum descubra os melhores serviços</h3>
+        <h3>Lorem ipsum lorem</h3>
+        <a href="" class="btn" id="botao">Quero conhecer</a>
     </section>
     <!------------------ Fim hero ------------------>
+
+    <!------------------ sessao2 ------------------>
+    <section class="sessao2">
+        <div class="container">
+            <div class="sessao2-content">
+                <h2>Descubra os serviços e soluções da AquaLife</h2>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                <a href="#" class="btn" id="faça-parte">Faça parte</a>
+            </div>
+            <div class="sessao2-image">
+                <img src="./assets/images/conteiner black.jpg" alt="Serviços e soluções">
+            </div>
+        </div>
+    </section>
+    <!------------------ Fim sessao2 ------------------>
+
 </body>
 </html>
