--- a/aqualife/index.html
+++ b/aqualife/index.html
@@ -57,6 +57,38 @@
         </div>
     </section>
     <!------------------ Fim sessao2 ------------------>
-
+    <!-- inicio da sessão 3 -->
+     <section class="sessao3">
+        <div class="container-top">
+            <img alt="containers" class="imagem-1" src="./assets/images/container-top.png"/>
+            <div class="container-text">
+                <h2 class="title-3">Nossa missão</h2>
+                <p class="paragraph-3">Nossa missão é otimizar a eficiência logística, reduzir custos e minimizar o impacto ambiental por meio do uso inteligente de tecnologia e dados </p>
+                <a href="#" class="btn-container-top">Descobrir</a>
+            </div>
+        </div>
+        <div class="container-bottom">
+            <div class="container-text-bottom">
+            <h2 class="title-4">Busca por Cargas em tempo real</h2>
+                <p class="paragraph-4">Empresas com cargas para transportar podem procurar embarcações disponíveis, comparando preços, tempos de entrega e rotas. </p>
+                    <div class="container-cards">
+                        <div class="container-cards-left">
+                            <p class="title-card">Fale com nossos especialistas</p>
+                            <div class="object-container"> <a class="link-card">Começar</a>
+                                <img class="object-arrow" alt="arrow" src="./assets/images/arrow.png"/>
+                            </div>
+                        </div>
+                        <div class="container-cards-right">
+                            <p class="title-card">Fale com nossos especialistas</p>
+                            <div class="object-container"> <a class="link-card">Começar</a>
+                                <img class="object-arrow" alt="arrow" src="./assets/images/arrow.png"/>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+            <img alt="containers" class="imagem-2" src="./assets/images/container-bottom.png"/>
+        </div>
+     </section>
+     <!-- fim da sessão 3 -->
 </body>
 </html>
