--- a/aqualife/index.html
+++ b/aqualife/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,12 +15,14 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="icon" href="./assets/images/AquaLifeLogo.png" type="image/x-icon">
 </head>
+
 <body>
     <!------------------ logo e menu ------------------>
     <header class="header-page">
         <!-- logo -->
         <h2>
-            <img src="./assets/images/AquaLifeLogo.png" alt="Logo Icon" style="width: 34px; height: 30px; vertical-align: middle; margin-right: 10px;">
+            <img src="./assets/images/AquaLifeLogo.png" alt="Logo Icon"
+                style="width: 34px; height: 30px; vertical-align: middle; margin-right: 10px;">
             AquaLife
         </h2>
 
@@ -35,10 +38,11 @@
 
     <!------------------ hero ------------------>
     <section class="hero">
-        <h1>Lorem ipsum dolor sit amet, consectetur </h1>
-        <h1>adipisicing elit. Nulla, sit?</h1>
-        <h3>Lorem ipsum descubra os melhores serviços</h3>
-        <h3>Lorem ipsum lorem</h3>
+        <h1>Embarque no compartilhamento <p>maritmo de logística</p>
+        </h1>
+        <h3>Faça parte da transformação do transporte de cargas <p>e encontre o canal certo para uma logística
+                sustentável.</p>
+        </h3>
         <a href="" class="btn" id="botao">Quero conhecer</a>
     </section>
     <!------------------ Fim hero ------------------>
@@ -47,8 +51,8 @@
     <section class="sessao2">
         <div class="container">
             <div class="sessao2-content">
-                <h2>Descubra os serviços e soluções da AquaLife</h2>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                <h1>Descubra os serviços e<p>soluções da AquaLife</p></h1>
+                <p>A AquaLife é uma plataforma inovadora de compartilhamento de logística, projetada para conectar embarcações a oportunidades de transporte em todo o oceano.</p>
                 <a href="#" class="btn" id="faça-parte">Faça parte</a>
             </div>
             <div class="sessao2-image">
@@ -58,37 +62,40 @@
     </section>
     <!------------------ Fim sessao2 ------------------>
     <!-- inicio da sessão 3 -->
-     <section class="sessao3">
+    <section class="sessao3">
         <div class="container-top">
-            <img alt="containers" class="imagem-1" src="./assets/images/container-top.png"/>
+            <img alt="containers" class="imagem-1" src="./assets/images/container-top.png" />
             <div class="container-text">
                 <h2 class="title-3">Nossa missão</h2>
-                <p class="paragraph-3">Nossa missão é otimizar a eficiência logística, reduzir custos e minimizar o impacto ambiental por meio do uso inteligente de tecnologia e dados </p>
+                <p class="paragraph-3">Nossa missão é otimizar a eficiência logística, reduzir custos e minimizar o
+                    impacto ambiental por meio do uso inteligente de tecnologia e dados </p>
                 <a href="#" class="btn-container-top">Descobrir</a>
             </div>
         </div>
         <div class="container-bottom">
             <div class="container-text-bottom">
-            <h2 class="title-4">Busca por Cargas em tempo real</h2>
-                <p class="paragraph-4">Empresas com cargas para transportar podem procurar embarcações disponíveis, comparando preços, tempos de entrega e rotas. </p>
-                    <div class="container-cards">
-                        <div class="container-cards-left">
-                            <p class="title-card">Fale com nossos especialistas</p>
-                            <div class="object-container"> <a class="link-card">Começar</a>
-                                <img class="object-arrow" alt="arrow" src="./assets/images/arrow.png"/>
-                            </div>
-                        </div>
-                        <div class="container-cards-right">
-                            <p class="title-card">Fale com nossos especialistas</p>
-                            <div class="object-container"> <a class="link-card">Começar</a>
-                                <img class="object-arrow" alt="arrow" src="./assets/images/arrow.png"/>
-                            </div>
+                <h2 class="title-4">Busca por Cargas em tempo real</h2>
+                <p class="paragraph-4">Empresas com cargas para transportar podem procurar embarcações disponíveis,
+                    comparando preços, tempos de entrega e rotas. </p>
+                <div class="container-cards">
+                    <div class="container-cards-left">
+                        <p class="title-card">Fale com nossos especialistas</p>
+                        <div class="object-container"> <a class="link-card">Começar</a>
+                            <img class="object-arrow" alt="arrow" src="./assets/images/arrow.png" />
                         </div>
                     </div>
+                    <div class="container-cards-right">
+                        <p class="title-card">Fale com nossos especialistas</p>
+                        <div class="object-container"> <a class="link-card">Começar</a>
+                            <img class="object-arrow" alt="arrow" src="./assets/images/arrow.png" />
+                        </div>
+                    </div>
+                </div>
             </div>
-            <img alt="containers" class="imagem-2" src="./assets/images/container-bottom.png"/>
+            <img alt="containers" class="imagem-2" src="./assets/images/container-bottom.png" />
         </div>
-     </section>
-     <!-- fim da sessão 3 -->
+    </section>
+    <!-- fim da sessão 3 -->
 </body>
+
 </html>
