att finalização e acessibilidade

--- a/aqualife/index.html
+++ b/aqualife/index.html
@@ -21,7 +21,7 @@
     <header class="header-page">
         <!-- logo -->
         <h2>
-            <img src="./assets/images/AquaLifeLogo.png" alt="Logo Icon"
+            <img src="./assets/images/AquaLifeLogo.png" alt="Icone da Logo AquaLife"
                 style="width: 34px; height: 30px; vertical-align: middle; margin-right: 10px;">
             AquaLife
         </h2>
@@ -29,7 +29,7 @@
         <!-- menu de navegação -->
         <nav class="header-menu">
             <ol>
-                <li><a href="Botão para login">Login</a></li>
+                <li><a href="Botão para login" class="btn-login">Login</a></li>
                 <li><a href="Botao para cadastro" class="btn" id="botao-cadastre">Cadastre-se</a></li>
             </ol>
         </nav>
@@ -38,8 +38,7 @@
 
     <!------------------ hero ------------------>
     <section class="hero">
-        <h1>Embarque no compartilhamento <p>maritmo de logística</p>
-        </h1>
+        <h1>Embarque no compartilhamento <br>maritmo de logística</h1>
         <h3>Faça parte da transformação do transporte de cargas <p>e encontre o canal certo para uma logística
                 sustentável.</p>
         </h3>
@@ -50,13 +49,16 @@
     <!------------------ sessao2 ------------------>
     <section class="sessao2">
         <div class="container">
-            <div class="sessao2-content">
-                <h1>Descubra os serviços e<p>soluções da AquaLife</p></h1>
-                <p>A AquaLife é uma plataforma inovadora de compartilhamento de logística, projetada para conectar embarcações a oportunidades de transporte em todo o oceano.</p>
-                <a href="#" class="btn" id="faça-parte">Faça parte</a>
-            </div>
             <div class="sessao2-image">
                 <img src="./assets/images/conteiner black.jpg" alt="Serviços e soluções">
+            </div>
+            <div class="sessao2-content">
+                <h1>Descubra os serviços e <br>soluções da AquaLife</h1>
+                <p>
+                    <p>A AquaLife é uma plataforma inovadora de <br> compartilhamento de logística, projetada para <br>
+                        conectar embarcações a oportunidades de <br> transporte em todo o oceano.</p>
+                </p>
+                <a href="#" class="btn" id="faça-parte">Faça parte</a>
             </div>
         </div>
     </section>
@@ -64,7 +66,7 @@
     <!-- inicio da sessão 3 -->
     <section class="sessao3">
         <div class="container-top">
-            <img alt="containers" class="imagem-1" src="./assets/images/container-top.png" />
+            <img alt="containers empilhados" class="imagem-1" src="./assets/images/container-top.png" />
             <div class="container-text">
                 <h2 class="title-3">Nossa missão</h2>
                 <p class="paragraph-3">Nossa missão é otimizar a eficiência logística, reduzir custos e minimizar o
@@ -81,18 +83,18 @@
                     <div class="container-cards-left">
                         <p class="title-card">Fale com nossos especialistas</p>
                         <div class="object-container"> <a class="link-card">Começar</a>
-                            <img class="object-arrow" alt="arrow" src="./assets/images/arrow.png" />
+                            <img class="obj" alt="Seta para a direita em cima do Botao para falar com especialista" src="./assets/images/arrow.png" />
                         </div>
                     </div>
                     <div class="container-cards-right">
                         <p class="title-card">Fale com nossos especialistas</p>
                         <div class="object-container"> <a class="link-card">Começar</a>
-                            <img class="object-arrow" alt="arrow" src="./assets/images/arrow.png" />
+                            <img class="object-arrow" alt="Seta para a direita em cima do Botao para falar com especialistas" src="./assets/images/arrow.png" />
                         </div>
                     </div>
                 </div>
             </div>
-            <img alt="containers" class="imagem-2" src="./assets/images/container-bottom.png" />
+            <img alt="A imagem mostra um homem com capacete em seu trabalho e ao fundo conteineres empilhados" class="imagem-2" src="./assets/images/container-bottom.png" />
         </div>
     </section>
     <!-- fim da sessão 3 -->
